--- a/index.html
+++ b/index.html
@@ -14,7 +14,28 @@
             <h4>presented by oxideSeven</h4>
         </header>
 
-        <main></main>
+        <main>
+            <div id = "calcDisplay"><span id = "displayOutput"></span></div>
+            <div class = "calcBtns">
+                <button id = "btn0">0</button>
+                <button id = "btn1">1</button>
+                <button id = "btn2">2</button>
+                <button id = "btn3">3</button>
+                <button id = "btn4">4</button>
+                <button id = "btn5">5</button>
+                <button id = "btn6">6</button>
+                <button id = "btn7">7</button>
+                <button id = "btn8">8</button>
+                <button id = "btn9">9</button>
+                <button id = "btnAdd">+</button>
+                <button id = "btnSub">-</button>
+                <button id = "btnMul">*</button>
+                <button id = "btnDiv">÷</button>
+                <button id = "btnEqu">=</button>
+                <button id = "btnClr">C</button>
+            </div>
+
+        </main>
 
         <footer>
             <p>
