--- a/index.html
+++ b/index.html
@@ -15,24 +15,24 @@
         </header>
 
         <main>
-            <div id = "calcDisplay"><span id = "displayOutput"></span></div>
+            <div id = "calcDisplay"><span id = "displayOutput"></span><br><span id = "resultOutput"></span></div>
             <div class = "calcBtns">
-                <button id = "btn0">0</button>
-                <button id = "btn1">1</button>
-                <button id = "btn2">2</button>
-                <button id = "btn3">3</button>
-                <button id = "btn4">4</button>
-                <button id = "btn5">5</button>
-                <button id = "btn6">6</button>
-                <button id = "btn7">7</button>
-                <button id = "btn8">8</button>
-                <button id = "btn9">9</button>
-                <button id = "btnAdd">+</button>
-                <button id = "btnSub">-</button>
-                <button id = "btnMul">*</button>
-                <button id = "btnDiv">÷</button>
-                <button id = "btnEqu">=</button>
-                <button id = "btnClr">C</button>
+                <button class = "numBtn" id = "btn0">0</button>
+                <button class = "numBtn" id = "btn1">1</button>
+                <button class = "numBtn" id = "btn2">2</button>
+                <button class = "numBtn" id = "btn3">3</button>
+                <button class = "numBtn" id = "btn4">4</button>
+                <button class = "numBtn" id = "btn5">5</button>
+                <button class = "numBtn" id = "btn6">6</button>
+                <button class = "numBtn" id = "btn7">7</button>
+                <button class = "numBtn" id = "btn8">8</button>
+                <button class = "numBtn" id = "btn9">9</button>
+                <button class = "opBtn" id = "btnAdd">+</button>
+                <button class = "opBtn" id = "btnSub">-</button>
+                <button class = "opBtn" id = "btnMul">*</button>
+                <button class = "opBtn" id = "btnDiv">÷</button>
+                <button class = "equBtn" id = "btnEqu">=</button>
+                <button class = "clrBtn" id = "btnClr">C</button>
             </div>
 
         </main>
