--- a/index.html
+++ b/index.html
@@ -17,22 +17,24 @@
         <main>
             <div id = "calcDisplay"><span id = "displayOutput"></span><br><span id = "resultOutput"></span></div>
             <div class = "calcBtns">
-                <button class = "numBtn" id = "btn0">0</button>
-                <button class = "numBtn" id = "btn1">1</button>
-                <button class = "numBtn" id = "btn2">2</button>
-                <button class = "numBtn" id = "btn3">3</button>
-                <button class = "numBtn" id = "btn4">4</button>
-                <button class = "numBtn" id = "btn5">5</button>
-                <button class = "numBtn" id = "btn6">6</button>
+                <button class = "clrBtn" id = "btnClr"><i class="fas fa-trash-alt"></i></button>
+                <button class = "delBtn" id = "btnDel"><i class="fas fa-backspace"></i></button>
                 <button class = "numBtn" id = "btn7">7</button>
                 <button class = "numBtn" id = "btn8">8</button>
                 <button class = "numBtn" id = "btn9">9</button>
-                <button class = "opBtn" id = "btnAdd">+</button>
-                <button class = "opBtn" id = "btnSub">-</button>
-                <button class = "opBtn" id = "btnMul">*</button>
                 <button class = "opBtn" id = "btnDiv">÷</button>
+                <button class = "numBtn" id = "btn4">4</button>
+                <button class = "numBtn" id = "btn5">5</button>
+                <button class = "numBtn" id = "btn6">6</button>
+                <button class = "opBtn" id = "btnMul">*</button>
+                <button class = "numBtn" id = "btn1">1</button>
+                <button class = "numBtn" id = "btn2">2</button>
+                <button class = "numBtn" id = "btn3">3</button>
+                <button class = "opBtn" id = "btnSub">-</button>
+                <button class = "decBtn" id = "btnDec">.</button>
+                <button class = "numBtn" id = "btn0">0</button>
                 <button class = "equBtn" id = "btnEqu">=</button>
-                <button class = "clrBtn" id = "btnClr">C</button>
+                <button class = "opBtn" id = "btnAdd">+</button>
             </div>
 
         </main>
